--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         <div class="absolute inset-0 bg-brand-red bg-opacity-90">
             <div class="container mx-auto px-4 h-full flex flex-col justify-center items-center text-white">
                 <h1 class="text-6xl md:text-8xl font-bold mb-8">Better Than Good</h1>
-                <p class="text-xl md:text-2xl mb-8">独立开发人 | 专注AI编程</p>
+                <p class="text-xl md:text-2xl mb-8">九年移动端研发工程师 | AI编程实践者 | Android & 鸿蒙开发</p>
                 <div class="flex space-x-6">
-                    <a href="https://blog.csdn.net/luyuqin0115" class="text-white hover:text-gray-200">
+                    <a href="https://blog.csdn.net/luyuqin0115" target="_blank" class="text-white hover:text-gray-200 transition-colors">
                         <i class="fab fa-blogger fa-2x"></i>
                     </a>
-                    <a href="#" class="text-white hover:text-gray-200">
+                    <a href="https://juejin.cn/user/353379373053610" target="_blank" class="text-white hover:text-gray-200 transition-colors">
+                        <i class="fas fa-gem fa-2x"></i>
+                    </a>
+                    <a href="#contact" class="text-white hover:text-gray-200 transition-colors">
                         <i class="fab fa-weixin fa-2x"></i>
                     </a>
                 </div>
@@ -47,17 +50,24 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div class="space-y-6">
                     <div class="flex items-center space-x-4">
-                        <i class="fas fa-code text-brand-red text-2xl"></i>
+                        <i class="fas fa-mobile-alt text-brand-red text-2xl"></i>
                         <div>
-                            <h3 class="text-xl font-bold">技术专注</h3>
-                            <p>专注AI编程开发，持续学习新技术</p>
+                            <h3 class="text-xl font-bold">移动端专家</h3>
+                            <p>九年移动端研发经验，专注Android和鸿蒙开发</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center space-x-4">
+                        <i class="fas fa-robot text-brand-red text-2xl"></i>
+                        <div>
+                            <h3 class="text-xl font-bold">AI编程实践者</h3>
+                            <p>积极探索AI在编程中的应用，提升开发效率</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-4">
                         <i class="fas fa-laptop-code text-brand-red text-2xl"></i>
                         <div>
-                            <h3 class="text-xl font-bold">独立开发</h3>
-                            <p>全栈开发能力，独立完成项目</p>
+                            <h3 class="text-xl font-bold">全栈开发</h3>
+                            <p>具备完整的项目开发能力，从需求到上线</p>
                         </div>
                     </div>
                 </div>
@@ -73,33 +83,106 @@
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold mb-12 text-center">工作经历</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <i class="fas fa-building text-brand-red text-3xl mb-4"></i>
-                    <h3 class="text-xl font-bold mb-2">斑马网络</h3>
-                    <p class="text-gray-600">技术开发</p>
+                <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
+                    <i class="fas fa-car text-brand-red text-3xl mb-4"></i>
+                    <h3 class="text-xl font-bold mb-2">阿里集团斑马智行</h3>
+                    <p class="text-gray-600 mb-2">应用开发工程师</p>
+                    <p class="text-sm text-gray-500">智能车联网应用开发</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-lg">
+                <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
                     <i class="fas fa-shopping-cart text-brand-red text-3xl mb-4"></i>
                     <h3 class="text-xl font-bold mb-2">苏宁易购</h3>
-                    <p class="text-gray-600">技术开发</p>
+                    <p class="text-gray-600 mb-2">Android开发工程师</p>
+                    <p class="text-sm text-gray-500">电商平台移动端开发</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-lg">
+                <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
                     <i class="fas fa-robot text-brand-red text-3xl mb-4"></i>
                     <h3 class="text-xl font-bold mb-2">进化者机器人</h3>
-                    <p class="text-gray-600">技术开发</p>
+                    <p class="text-gray-600 mb-2">Android开发工程师</p>
+                    <p class="text-sm text-gray-500">机器人控制应用开发</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="py-20 bg-white">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold mb-12 text-center">我的作品</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white rounded-lg shadow-xl overflow-hidden transform hover:scale-105 transition-transform">
+                    <img src="https://picsum.photos/600/400?random=3" alt="鸿蒙泡泡云音乐" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-2 flex items-center">
+                            <i class="fas fa-music text-brand-red mr-2"></i>
+                            鸿蒙泡泡云音乐
+                        </h3>
+                        <p class="text-gray-600 mb-4">基于鸿蒙系统开发的音乐播放应用，展示鸿蒙开发技术栈的实际应用</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-sm text-gray-500">
+                                <i class="fab fa-android mr-1"></i>
+                                鸿蒙应用
+                            </span>
+                            <a href="https://github.com/luyuqin0115/MusicApplication" target="_blank" 
+                               class="text-brand-red hover:text-red-700 transition-colors">
+                                <i class="fab fa-github mr-1"></i>
+                                查看源码
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="bg-white rounded-lg shadow-xl overflow-hidden transform hover:scale-105 transition-transform">
+                    <img src="https://picsum.photos/600/400?random=4" alt="Kotlin登录应用" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-2 flex items-center">
+                            <i class="fas fa-user-lock text-brand-red mr-2"></i>
+                            Kotlin注册登录实战
+                        </h3>
+                        <p class="text-gray-600 mb-4">使用Kotlin开发的完整注册登录系统，包含用户认证和数据管理功能</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-sm text-gray-500">
+                                <i class="fab fa-android mr-1"></i>
+                                Kotlin + Android
+                            </span>
+                            <a href="https://github.com/luyuqin0115/LoginApplication" target="_blank" 
+                               class="text-brand-red hover:text-red-700 transition-colors">
+                                <i class="fab fa-github mr-1"></i>
+                                查看源码
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section class="py-20 bg-brand-red text-white">
+    <section id="contact" class="py-20 bg-brand-red text-white">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-4xl font-bold mb-8">联系方式</h2>
-            <div class="space-y-4">
-                <p><i class="fab fa-weixin mr-2"></i>微信号：monster_aha</p>
-                <p><i class="fas fa-rss mr-2"></i>公众号：喵呜编程日记</p>
-                <p><i class="fab fa-blogger mr-2"></i>CSDN：<a href="https://blog.csdn.net/luyuqin0115" class="underline">访问我的博客</a></p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="flex flex-col items-center space-y-2">
+                    <i class="fab fa-weixin text-4xl mb-2"></i>
+                    <h3 class="text-xl font-bold">微信</h3>
+                    <p>monster_aha</p>
+                </div>
+                <div class="flex flex-col items-center space-y-2">
+                    <i class="fab fa-blogger text-4xl mb-2"></i>
+                    <h3 class="text-xl font-bold">CSDN博客</h3>
+                    <a href="https://blog.csdn.net/luyuqin0115?type=blog" target="_blank" 
+                       class="underline hover:text-gray-200 transition-colors">
+                        访问我的博客
+                    </a>
+                </div>
+                <div class="flex flex-col items-center space-y-2">
+                    <i class="fas fa-gem text-4xl mb-2"></i>
+                    <h3 class="text-xl font-bold">稀土掘金</h3>
+                    <a href="https://juejin.cn/user/353379373053610" target="_blank" 
+                       class="underline hover:text-gray-200 transition-colors">
+                        技术文章分享
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -108,7 +191,21 @@
     <footer class="py-6 bg-gray-900 text-white">
         <div class="container mx-auto px-4 text-center">
             <p>&copy; 2024 Monster_aha. All rights reserved.</p>
+            <p class="text-sm text-gray-400 mt-2">九年移动端开发经验 · AI编程实践者</p>
         </div>
     </footer>
+
+    <!-- Smooth scroll script -->
+    <script>
+        // Smooth scrolling for anchor links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html> 
