--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="flex items-center space-x-4">
                         <i class="fas fa-mobile-alt text-brand-red text-2xl"></i>
                         <div>
-                            <h3 class="text-xl font-bold">移动端专家</h3>
+                            <h3 class="text-xl font-bold">移动端高级开发工程师</h3>
                             <p>九年移动端研发经验，专注Android和鸿蒙开发</p>
                         </div>
                     </div>
